corrections to chapter 2

--- a/01_Ch_2_Vector_Spaces_and_Bases/033-span_lin_ind.ipynb
+++ b/01_Ch_2_Vector_Spaces_and_Bases/033-span_lin_ind.ipynb
@@ -61,7 +61,7 @@
     "\n",
     "By the end of this page, you should know:\n",
     "- how to form linear combinations of vectors\n",
-    "- what the a _span_ of a set of vectors is\n",
+    "- a _span_ of a set of vectors\n",
     "- what it means for a collection of vectors to be linearly dependent and independent\n",
     "- how to check for linear dependence and independence"
    ]
@@ -444,7 +444,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.8.19"
   }
  },
  "nbformat": 4,
