--- a/01_Ch_2_Vector_Spaces_and_Bases/034-basis_dim.ipynb
+++ b/01_Ch_2_Vector_Spaces_and_Bases/034-basis_dim.ipynb
@@ -37,7 +37,7 @@
    "id": "cf0fa359-af56-4928-96f9-698c1e167549",
    "metadata": {},
    "source": [
-    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/01_Vector_Spaces_and_Bases/034-basis_dim.ipynb)\n",
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/01_Ch_2_Vector_Spaces_and_Bases/034-basis_dim.ipynb)\n",
     "\n",
     "{doc}`Lecture notes <../lecture_notes/Lecture 03 - Vector Spaces 1_ Definitions, Subspaces, Span, Linear Independence, Basis, and Dimension.pdf>`"
    ]
@@ -60,9 +60,9 @@
     "## Learning Objectives\n",
     "\n",
     "By the end of this page, you should know:\n",
-    "- what is a basis\n",
-    "- what is a dimension\n",
-    "- coordinate system for generic vector spaces"
+    "- a basis of a vector space\n",
+    "- the dimension of a vector space\n",
+    "- a coordinate system for generic vector spaces"
    ]
   },
   {
@@ -72,7 +72,8 @@
    "source": [
     "## Basis\n",
     "\n",
-    "In this section, we will show that any $n$ _dimensional_ vector space looks like and \"behaves\" the same as $\\mathbb{R}^n$. \n",
+    "\n",
+    "The previous section was admittedly quite abstract, but it was necessary to get us to the extremely practical notion of a _basis of a vector space_. This section is where the magic happens: we will show that any $n$ _dimensional_ vector space doesn't just look like, but \"behaves the same\" as $\\mathbb{R}^n$. \n",
     "\n",
     ":::{prf:definition} Basis\n",
     ":label: basis_defn\n",
@@ -82,7 +83,7 @@
     "2. is [linearly independent](./033-span_lin_ind.ipynb#lin_dep).\n",
     ":::\n",
     "\n",
-    "A basis is the smallest collection of vectors that allows us to express any vector $\\vv v \\in V$ as a linear combination of the basis vectors.\n",
+    "Another way of thinking about a basis is we are looking for the smallest collection of vectors that allows us to express any vector $\\vv v \\in V$ as a linear combination from our collection.\n",
     "\n",
     ":::{prf:example}\n",
     ":label:basis_eg\n",
@@ -94,11 +95,13 @@
     "\\vv e_2 = \\bm 0 \\\\ 1 \\\\ 0 \\\\ \\vdots \\\\ 0\\em, \\ldots, \n",
     "\\vv e_n = \\bm 0 \\\\ 0 \\\\ \\vdots \\\\ 0 \\\\ 1\\em\n",
     "\\end{equation}\n",
-    "The vectors in [](#stand_basis) span $\\mathbb{R}^n$: $\\vv x = x_1 \\vv e_1 + x_2 \\vv e_2 + \\ldots + x_n \\vv e_n$, and are linearly independent. \n",
+    "The vectors in [](#stand_basis) clearly span $\\mathbb{R}^n$: $\\vv x = x_1 \\vv e_1 + x_2 \\vv e_2 + \\ldots + x_n \\vv e_n$ and are linearly independent.\n",
+    "\n",
     "\n",
     "```{note}\n",
-    "Any basis of $\\mathbb{R}^n$ consists of exactly $n$ vectors.\n",
+    "That we need $n$ vectors to define a basis of $\\mathbb{R}^n$ is no coincidence, in fact any basis of $\\mathbb{R}^n$ consists of exactly $n$ vectors.\n",
     "```\n",
+    "\n",
     ":::\n",
     "\n",
     ":::{prf:example}\n",
@@ -107,7 +110,7 @@
     "The set $S = \\{1, x, x^2, \\ldots, x^n\\}$ is a basis for [$P^{(n)}$](./031-vector_spaces#poly_ex5): the space of polynomials of degree $\\leq n$. This is called the _standard basis for $P^{(n)}$_.\n",
     "\n",
     "```{note}\n",
-    "$P^{(n)}$ can have upto $n+1$ terms ($a_0, a_1, \\ldots ,a_n$), and the basis $S$ also has $n+1$ terms.\n",
+    "Notice that $P^{(n)}$ can have upto $n+1$ terms ($a_0, a_1x, \\ldots ,a_nx^n$), and that its basis $S$ also has $n+1$ terms. This is not a coincidence!\n",
     "```\n",
     ":::\n",
     "\n",
@@ -119,7 +122,7 @@
     ":::{prf:example}\n",
     ":label:dim_eg\n",
     "\n",
-    "Both $\\mathbb{R}^n$ and $P^{(n-1)}$ have dimension $n$. dim$(P^{(n)})=n+1$ because of the constant term $a_0$ in $p(x) = a_0 + a_1x + \\ldots + a_nx^n$.\n",
+    "Both $\\mathbb{R}^n$ and $P^{(n-1)}$ have dimension $n$. Note that dim$(P^{(n)})=n+1$ because of the constant term $a_0$ in $p(x) = a_0 + a_1x + \\ldots + a_nx^n$.\n",
     ":::"
    ]
   },
@@ -128,9 +131,9 @@
    "id": "164f0b5b-29a4-4499-8cf9-f1b676e685d5",
    "metadata": {},
    "source": [
-    "## Coordinate system\n",
+    "## Coordinate System\n",
     "\n",
-    "In this section, we will discuss how to impose a \"coordinate system\" on a vector space $V$. If dim$(V) = n$, that is, if the basis has $n$ elements, then the coordinate system makes $V$ behave exactly like $\\mathbb{R}^n$. \n",
+    "An important reason for specifying a basis for a vector space $V$ is to impose a _coordinate system_ on $V$. This section will show that if if dim$(V) = n$, that is, if the basis has $n$ elements, then the coordinate system makes $V$ behave exactly like $\\mathbb{R}^n$!\n",
     "\n",
     "```{prf:theorem}\n",
     ":label:thm_coord\n",
@@ -156,13 +159,14 @@
     ":::\n",
     "```\n",
     "\n",
-    "```{important}\n",
-    "For a given basis $B = \\{\\vv v_1 ,\\ldots, \\vv v_n\\}$ of a vector space $V$, we can therefore define the vector $\\vv c \\in \\mathbb{R}^n$ as the _coordinates_ of $\\vv x \\in V$ relative to $B$ by using $\\vv c$ as the weights in the representation\n",
+    ":::{prf:definition} Coordinates\n",
+    ":label: coord_defn\n",
+    "For a given basis $B = \\{\\vv v_1 ,\\ldots, \\vv v_n\\}$ of a vector space $V$, we can therefore define the vector $\\vv c \\in \\mathbb{R}^n$ as the _coordinates_ for $\\vv x$ relative to $B$ by the weights in its representation:\n",
     "\\begin{equation}\n",
     "\\label{coord_def}\n",
-    "\\vv x = c_1 \\vv v_1 + c_2 \\vv v_2 + \\ldots + c_n \\vv v_n, \\ \\vv c = \\bm c_1 \\\\ c_2 \\\\ \\vdots \\\\ c_n\\em.\n",
+    "\\vv c = \\bm c_1 \\\\ c_2 \\\\ \\vdots \\\\ c_n\\em,  \\ \\textrm{with} \\ \\vv x = c_1 \\vv v_1 + c_2 \\vv v_2 + \\ldots + c_n \\vv v_n.\n",
     "\\end{equation}\n",
-    "```"
+    ":::"
    ]
   },
   {
@@ -218,7 +222,7 @@
     "    \\vv p + \\vv q = \\bm a_0\\\\a_1\\\\a_2\\\\a_3 \\em + \\bm b_0\\\\b_1\\\\b_2\\\\b_3 \\em = \\bm a_2 + b_0 \\\\ a_1 + b_1 \\\\ a_2 + b_2 \\\\ a_3 + b_3 \\em\n",
     "\\end{align*}\n",
     "\n",
-    "You sohuld check that the same connection between $cp(x)$ and $c\\vv p$ also holds. By setting a suitable coordiante system (via a basis), working with elements of $P^{(3)}$, which are polynomial functions, can be turned into working with ordinary vectors in $\\mathbb{R}^4$!\n",
+    "You should check that the same connection between $cp(x)$ and $c\\vv p$ also holds. By setting a suitable coordiante system (via a basis), working with elements of $P^{(3)}$, which are polynomial functions, can be turned into working with ordinary vectors in $\\mathbb{R}^4$!\n",
     "\n",
     "The idea of going back and forth between the vector spaces is captured in terms of a **vector space isomorphism**. We do not yet have all of the tools needed to define this rigorously, but for now, we will interpret it as meaning that **every vector space calculation in $V$ is accurately reproduced in $W$, and vice versa**.\n",
     "\n",
@@ -229,16 +233,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd63f476-a11b-47f9-9e70-a2766204605e",
+   "id": "32ca80df-af8d-40fc-af5a-d3f0c5452f58",
    "metadata": {},
    "source": [
-    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/01_Vector_Spaces_and_Bases/034-basis_dim.ipynb)\n"
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/01_Ch_2_Vector_Spaces_and_Bases/034-basis_dim.ipynb)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7760a917-fb35-47fb-8e82-8f467f0366f5",
+   "id": "cce286fc-b514-44df-a92a-d17e829905f6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -264,7 +268,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.8.19"
   }
  },
  "nbformat": 4,
