--- a/01_Ch_2_Vector_Spaces_and_Bases/036-adj.ipynb
+++ b/01_Ch_2_Vector_Spaces_and_Bases/036-adj.ipynb
@@ -37,7 +37,7 @@
    "id": "49828b61-5670-44c3-a88b-ddcff2a5fc0b",
    "metadata": {},
    "source": [
-    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/01_Vector_Spaces_and_Bases/036-adj.ipynb)\n",
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/01_Ch_2_Vector_Spaces_and_Bases/036-adj.ipynb)\n",
     "\n",
     "{doc}`Lecture notes <../lecture_notes/Lecture 04 - The Fundamental Matrix Subspaces (Kernel, Image, CoKernel, CoImage), Fundamental Theorem of Linear Algebra, and a brief interlude on the Matrix Transpose.pdf>`"
    ]
@@ -60,7 +60,7 @@
     "## Learning Objectives\n",
     "\n",
     "By the end of this page, you should know:\n",
-    "- what is the transpose of a matrix\n",
+    "- the transpose of a matrix\n",
     "- Adjoint systems\n",
     "- Left Null Space\n",
     "- Row Space\n",
@@ -78,17 +78,17 @@
     "\n",
     ":::{prf:example}\n",
     ":label:tr_eg\n",
-    "1. If $A = \\bm -1 & 8 \\\\ 5 & 7 \\\\ 2 & -5\\em$, then $A^{\\top} = \\bm -1 & 5 & 2 \\\\ 8 & 7 & -5\\em$.\n",
-    "2. Transpose of a row vector $\\vv c^{\\top} = \\bm 3 & -1 & -2\\em$ is a column vector $\\vv c = \\bm 3 \\\\ -1 \\\\ -2\\em$.\n",
+    "1. If $A = \\bm 1 & 2 & 3 \\\\ 4 & 5 & 6\\em$, then $A^{\\top} = \\bm 1 & 4 \\\\ 2 & 5 \\\\ 3 & 6\\em$.\n",
+    "2. Transpose of a column vector $\\vv c = \\bm 1 & 2 & 3\\em$ gives a row vector $\\vv c^{\\top} = \\bm 1 \\\\ 2 \\\\ 3\\em$.\n",
     ":::\n",
     "\n",
     "```{note} Properties\n",
-    "1. $\\left(A^{\\top}\\right)^{\\top} = A$ (Transpose of transpose brings back to original form) \n",
+    "1. $\\left(A^{\\top}\\right)^{\\top} = A$ (Transpose of transpose brings back to where you started) \n",
     "2. $(A + B)^{\\top} = A^{\\top} + B^{\\top}$ (Transpose and addition commute)\n",
     "3. $(AB)^{\\top} = B^{\\top}A^{\\top}$ (Reverses order on products)\n",
     "4. $\\left(A^{-1}\\right)^{\\top} = \\left(A^{\\top}\\right)^{-1} = A^{-T}$ (inverse and transpose commute, provided $A^{-1}$ exists)\n",
     "\n",
-    "A special case if the product of a row vector $\\vv v^{\\top}$ and a column vector $\\vv w$ (which we will revisit):\n",
+    "A special case is the product of a row vector $\\vv v^{\\top}$ and a column vector $\\vv w$ (which we will revisit):\n",
     "\\begin{equation}\n",
     "\\label{row_col}\n",
     "\\vv v^{\\top} \\vv w = \\left(\\vv v^{\\top} \\vv w\\right)^{\\top} = \\vv w^{\\top} \\vv v,\n",
@@ -98,8 +98,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ca718995-66bb-4290-bdee-f70632cb5070",
+   "metadata": {},
+   "source": [
+    "#### Python Break!\n",
+    "\n",
+    "Transpose of a NumPy array `A` is given by `A.T`. Below are examples of matrix (and vector) transposes using NumPy."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "id": "5ce94e27-b915-4ab8-a779-5823bbfd62fe",
    "metadata": {},
    "outputs": [
@@ -109,30 +119,30 @@
      "text": [
       "Tranpose of \n",
       "A: \n",
-      " [[-1  5  2]\n",
-      " [ 8  7 -5]] \n",
+      " [[1 4]\n",
+      " [2 5]\n",
+      " [3 6]] \n",
       "c: \n",
-      " [[ 3]\n",
-      " [-1]\n",
-      " [-2]] \n",
+      " [[1 2 3]] \n",
       "c1: \n",
-      " [ 3 -1 -2]\n"
+      " [1 2 3]\n"
      ]
     }
    ],
    "source": [
-    "## Transpose of matrices\n",
+    "## Transpose of NumPy arrays\n",
     "import numpy as np\n",
     "\n",
-    "A = np.array([[-1, 8],\n",
-    "              [5, 7],\n",
-    "              [2, -5]])\n",
+    "A = np.array([[1, 2, 3],\n",
+    "              [4, 5, 6]])\n",
     "AT = A.T # Transpose of the A matrix\n",
     "\n",
-    "c = np.array([[3, -1, -2]]) # row vector\n",
-    "cT = c.T\n",
+    "c = np.array([[1],\n",
+    "              [2],\n",
+    "              [3]]) # column vector\n",
+    "cT = c.T # transpose of a column vector\n",
     "\n",
-    "c1 = np.array([3, -1, -2]) # ?-vector\n",
+    "c1 = np.array([1, 2, 3]) # ?-vector\n",
     "c1T = c1.T\n",
     "\n",
     "print(\"Tranpose of \\nA: \\n\", AT, \"\\nc: \\n\", cT, \"\\nc1: \\n\", c1T)"
@@ -458,7 +468,7 @@
    "id": "f04e5c7c-f681-4b1e-945f-e676b0f052f5",
    "metadata": {},
    "source": [
-    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/01_Vector_Spaces_and_Bases/036-adj.ipynb)"
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/01_Ch_2_Vector_Spaces_and_Bases/036-adj.ipynb)"
    ]
   },
   {
@@ -490,7 +500,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.8.19"
   }
  },
  "nbformat": 4,
