minor corrections chapter 2

--- a/01_Ch_2_Vector_Spaces_and_Bases/036-adj.ipynb
+++ b/01_Ch_2_Vector_Spaces_and_Bases/036-adj.ipynb
@@ -74,7 +74,7 @@
    "source": [
     "## Matrix Transpose\n",
     "\n",
-    "The transpose $A^{\\top}$ of an $m \\times n$ matrix $A$ is the $n \\times m$ matrix obtained by interchanging its rows and columns. Hence, if $B = A^{\\top}$, then $b_{ij} = a_{ji}$. \n",
+    "The transpose $A^{\\top}$ of an $m \\times n$ matrix $A$ is the $n \\times m$ matrix obtained by interchanging its rows and columns. Hence, if ${B = A^{\\top}}$, then $b_{ij} = a_{ji}$. \n",
     "\n",
     ":::{prf:example}\n",
     ":label:tr_eg\n",
@@ -155,7 +155,7 @@
    "source": [
     "## Adjoint System\n",
     "\n",
-    "This section explores the properties of the system of linear equations defined by $A^{\\top}$.\n",
+    "This section explores the properties of the system of linear equations defined by $A^{\\top}$, rather than $A$. This _adjoint system_ might first appear as some abstract nonsense that only mathematicians care about, but we will show that is has very practical consequences and interpretations. \n",
     "\n",
     ":::{prf:definition} Adjoint System\n",
     ":label: adj_defn\n",
@@ -164,29 +164,29 @@
     "\\label{adj_eqn}\n",
     "A^{\\top} \\vv y = \\vv f\n",
     "\\end{equation}\n",
-    "consisting of $n$ equations in $m$ unknowns $\\vv y \\in \\mathbb{R}^m$ with right-hand side $\\vv f \\in \\mathbb{R}^n$.\n",
+    "consisting of $n$ equations in $m$ unknowns $\\vv y \\in \\mathbb{R}^m$ with Right-Hand Side (RHS) $\\vv f \\in \\mathbb{R}^n$.\n",
     ":::\n",
     "\n",
     ":::{prf:example}\n",
     ":label:adj_eg\n",
     "Consider the linear system $A \\vv x = \\vv b$ with\n",
     "$$\n",
-    "A = \\bm 1 & 5 & -2 & 2 \\\\ 0 & 1 & 2 & -5 \\\\ 1 & 3 & -3 & 7\\em,\n",
+    "A = \\bm 1 & -3 & 7 & 9 \\\\ 0 & 1 & 5 & -3 \\\\ 1 & -2 & -2 & 6\\em,\n",
     "$$\n",
     "which has the transpose \n",
     "$$\n",
-    "A^{\\top} = \\bm 1 & 0 & 1 \\\\ 5 & 1 & 3 \\\\ -2 & 2 & -3 \\\\ 2 & -5 & 7\\em.\n",
+    "A^{\\top} = \\bm 1 & 0 & 1 \\\\ -3 & 1 & -2 \\\\ 7 & 5 & -2 \\\\ 9 & -3 & 6\\em.\n",
     "$$\n",
     "Thus, the adjoint system $A^{\\top} \\vv y = \\vv f$ is\n",
     "$$\n",
-    "y_1 + y_2 &= f_1, \\\\\n",
-    "5y_1 + y_2 + 3y_3 &= f_2, \\\\\n",
-    "-2y_1 + 2y_2 - 3y_3 &= f_3, \\\\\n",
-    "2y_1 - 5y_2 + 7y_3 &= f_4.\n",
+    "y_1 + y_3 &= f_1, \\\\\n",
+    "-3y_1 + y_2- 2y_3 &= f_2, \\\\\n",
+    "7y_1 + 5y_2 - 2y_3 &= f_3, \\\\\n",
+    "9y_1 - 3y_2 + 6y_3 &= f_4.\n",
     "$$\n",
     ":::\n",
     "\n",
-    "We will see some surprising connections between the solutions of $A \\vv x = \\vv b$ and $A^{\\top} \\vv y = \\vv f$ later in the course.\n",
+    "At first glance, the solutions to $A \\vv x = \\vv b$ and the solutions to its adjoint $A^{\\top} \\vv y = \\vv f$ seem unrelated. We will see some very surprising connections between them that will be revisited in even greater depth later in the course.\n",
     "\n"
    ]
   },
