check broken links

--- a/01_Ch_2_Vector_Spaces_and_Bases/036-adj.ipynb
+++ b/01_Ch_2_Vector_Spaces_and_Bases/036-adj.ipynb
@@ -197,6 +197,7 @@
    "source": [
     "## Row Space and Left Null Space\n",
     "\n",
+    "We start by introducing the last two fundamental subspaces associated with a matrix $A$.\n",
     "\n",
     ":::{prf:definition} Row Space\n",
     ":label: rows_defn\n",
@@ -206,7 +207,7 @@
     "\\textrm{Row}(A) = \\textrm{Col}(A^{\\top}) = \\{\\vv f \\in \\mathbb{R}^n : \\vv f = A^{\\top} \\vv y \\ \\textrm{for some} \\ \\vv y \\in \\mathbb{R}^m\\} \\subset \\mathbb{R}^n\n",
     "\\end{equation}\n",
     ":::\n",
-    "It is called the row space because it is the subspace of $\\mathbb{R}^n$ spanned by the rows of $A$. \n",
+    "It is called the row space because it is the subspace of $\\mathbb{R}^n$ spanned by the rows of $A$ (more precisely, by the columns obtained from transposing the rows of $A$). \n",
     "\n",
     ":::{prf:definition} Left Null Space\n",
     ":label: nulls_defn\n",
@@ -216,7 +217,7 @@
     "\\textrm{LNull}(A) = \\textrm{Null}(A^{\\top}) = \\{\\vv w \\in \\mathbb{R}^m :  A^{\\top} \\vv w = \\vv 0\\} \\subset \\mathbb{R}^m\n",
     "\\end{equation}\n",
     ":::\n",
-    "It is called the left null space of $A$ because LNull$(A)$ is composed of row vectors $\\vv w^{\\top}$ that satisfy $\\vv w^{\\top} A = \\vv 0^{\\top}$.\n",
+    "It is called the left null space of $A$ because up to taking a transpose, LNull$(A)$ is composed of row vectors $\\vv w^{\\top}$ satisfying $\\vv w^{\\top} A = \\vv 0^{\\top}$.\n",
     "\n",
     "\n",
     ":::{prf:example} Finding the kernel, image, cokernel, and coimage of a $3\\times 4$ matrix\n",
@@ -232,7 +233,7 @@
     "    \\em\n",
     "\\end{align*}\n",
     "\n",
-    "Let's find its four fundamental subspaces (i.e., give bases for these subspaces), using hand and via the ``sympy`` Python package (it's also straightforward to do this in ``numpy``).\n",
+    "Let's find the four fundamental subspaces (i.e., give bases for these subspaces) of $A$.\n",
     "\n",
     "**Finding the nullspace/kernel.** The nullspace is the solution to the homogenous system:\n",
     "\n",
@@ -325,8 +326,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ced6653c-3e9f-4457-ae98-8fbf1c768e4e",
+   "metadata": {},
+   "source": [
+    "#### Python break!\n",
+    "\n",
+    "In [](#alls_eg), we found the four fundamental subspacesthe using hand. In Python, we can use the ``sympy`` package (it's also straightforward to do this in ``numpy``) to do the same. \n",
+    "\n",
+    "<!-- # Using numpy\n",
+    "SVD for null space, QR decomposition for column space -->"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 2,
    "id": "a551398f-fa14-4d55-b39d-33119c407259",
    "metadata": {},
    "outputs": [
@@ -402,27 +416,24 @@
    "source": [
     "## The Fundamental Theorem\n",
     "\n",
-    "The transpose $A^{\\top}$ of an $m \\times n$ matrix $A$ is the $n \\times m$ matrix obtained by interchanging its rows and columns. Hence, if $B = A^{\\top}$, then $b_{ij} = a_{ji}$. \n",
-    "\n",
     ":::{prf:theorem} The Fundamental Theorem of Linear Algebra\n",
     ":label:fund_thm\n",
     "Let $A$ be an $m \\times n$ matrix, and let $r$ be its rank. Then\n",
     "\\begin{equation}\n",
     "\\label{fund_thm_eqn}\n",
+    "\n",
     "\\textrm{dim(Row}(A)) = \\textrm{dim(Col}(A)) = \\textrm{rank}(A) = \\textrm{rank}(A^{\\top}) = r, \\\\\n",
     "\\textrm{dim(Null}(A)) = n - r, \\ \\textrm{dim(LNull}(A)) = m-r.\n",
     "\\end{equation}\n",
     ":::\n",
     "\n",
-    "The proof of [](#fund_thm) can be found in pp. 114-118 of ALA.\n",
+    "The proof of [](#fund_thm) can be found in pp. 114-118 of ALA. We will focus on some remarkable implications of [](#fund_thm) which are given below.\n",
     "\n",
     "\n",
     "```{note} Observations from [](#fund_thm)\n",
     "1. [Rank](../Linear_Algebraic_Systems/026-linsys-general.ipynb#rank_defn) is defined as the number of pivots, which coincides with the number of linearly independent columns of $A$. Hence, from [](#fund_thm), rank=number of linearly independent rows! \n",
     "2. Taking transposes does not affect the rank: rank is an intrinsic property of a matrix.\n",
     "```\n",
-    "\n",
-    "One implication of [](#fund_thm) is given below.\n",
     "\n",
     ":::{prf:theorem} Rank-Nullity Theorem\n",
     ":label:rank_null_thm\n",
@@ -437,8 +448,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f4fa769d-5e90-4d23-a610-0d24980a715c",
+   "metadata": {},
+   "source": [
+    "#### Python break!\n",
+    "\n",
+    "We verify [](#rank_null_thm) below in Python using the fundamental subspaces we computed previously."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "id": "90f04428-e354-4158-b1cf-06d075340da4",
    "metadata": {},
    "outputs": [
@@ -457,7 +478,7 @@
     "dim_col = len(A_col)\n",
     "rank = A.rank()\n",
     "dim_null = len(A_Null)\n",
-    "n_cols = A.shapev[1] # what is A.shape[0]?\n",
+    "n_cols = A.shape[1] # what is A.shape[0]?\n",
     "\n",
     "print(\"Rank: \", rank, \". Dimension of column space is \", dim_col, \"and null space is \", dim_null, \n",
     "      \"\\nNumber of columns n is \", n_cols)"
@@ -470,14 +491,6 @@
    "source": [
     "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/01_Ch_2_Vector_Spaces_and_Bases/036-adj.ipynb)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7e037c5f-f50c-4d93-ad0b-4f1e0adde3b3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
