--- a/01_Ch_2_Vector_Spaces_and_Bases/037-network.ipynb
+++ b/01_Ch_2_Vector_Spaces_and_Bases/037-network.ipynb
@@ -37,7 +37,7 @@
    "id": "32164906-4a16-4c63-a6e4-380f298aebd4",
    "metadata": {},
    "source": [
-    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/01_Vector_Spaces_and_Bases/037-network.ipynb)\n",
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/01_Ch_2_Vector_Spaces_and_Bases/037-network.ipynb)\n",
     "\n",
     "{doc}`Lecture notes <../lecture_notes/Lecture 04 - The Fundamental Matrix Subspaces (Kernel, Image, CoKernel, CoImage), Fundamental Theorem of Linear Algebra, and a brief interlude on the Matrix Transpose.pdf>`"
    ]
@@ -61,8 +61,8 @@
     "\n",
     "By the end of this page, you should know:\n",
     "- how to represent flows in networks as matrices\n",
-    "- what are sources and sinks\n",
-    "- how to relate flow conservation to linear systems"
+    "- the sources and sinks in a network\n",
+    "- the relationship of flow conservation to linear systems"
    ]
   },
   {
@@ -81,7 +81,7 @@
     ":align: center\n",
     ":::\n",
     "\n",
-    "We can associate an incidence matrix $A$ wiht this [graph](#network). Each row corresponds to a node, and each column to an edge, with\n",
+    "We can associate an incidence matrix $A$ with this [graph](#network). Each row corresponds to a node, and each column to an edge, with\n",
     "\\begin{equation}\n",
     "\\label{inc}\n",
     "a_{ij} =\n",
@@ -116,11 +116,11 @@
     "The flow conservation equations say that flows entering a node must equal flows leaving a node, which can be written as\n",
     "\\begin{equation}\n",
     "\\label{flow_conserve}\n",
-    "A \\vv f + \\vv s = \\vv 0 \\Leftrightarrow A \\vv f = - \\vv s, \n",
+    "A \\vv f + \\vv s = \\vv 0 \\ \\textrm{or} \\ A \\vv f = - \\vv s, \n",
     "\\end{equation}\n",
-    "where $\\vv f = \\bm f_1 \\\\ f_2 \\\\ f_3 \\\\ f_4 \\\\ f_5 \\em \\in \\mathbb{R}^{5}$ is the vector of edge flows. If we assume that $\\vv s$ is given to us, then the solution set to [](#flow_conserve) characterizes all flows compatible with the network and the sourc vector $\\vv s$.\n",
+    "where $\\vv f = \\bm f_1 \\\\ f_2 \\\\ f_3 \\\\ f_4 \\\\ f_5 \\em \\in \\mathbb{R}^{5}$ is the vector of edge flows. If we assume that $s_1$ and $s_4$ is given to us (they often are), then the solution set to [](#flow_conserve) characterizes all flows compatible with the network and the source vector $\\vv s$.\n",
     "\n",
-    "From [this theorem](#./035-kernel_image.ipynb#soln_thm), we note that $A \\vv f = - \\vv s$ has a solution if and only if $\\vv s \\in $Col$(A)$. Let's try to understand when this might be true by computing the basis for Col$(A)$.\n",
+    "From [this theorem](./035-kernel_image.ipynb#soln_thm), we see that $A \\vv f = - \\vv s$ has a solution if and only if $\\vv s \\in $Col$(A)$. Let's try to understand when this might be true by computing a basis for Col$(A)$.\n",
     "\n",
     "From [](#inc_A), we notice that \n",
     "1. columns 1, 2 and 3 are _not independent_: column 3 = column 2 - column 1.\n",
@@ -213,7 +213,7 @@
    "id": "c23418a8-5898-4562-a4b1-6226d4bdda1e",
    "metadata": {},
    "source": [
-    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/01_Vector_Spaces_and_Bases/037-network.ipynb)\n"
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/01_Ch_2_Vector_Spaces_and_Bases/037-network.ipynb)\n"
    ]
   },
   {
@@ -245,7 +245,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.8.19"
   }
  },
  "nbformat": 4,
