check ref to another notebook

--- a/01_Ch_2_Vector_Spaces_and_Bases/037-network.ipynb
+++ b/01_Ch_2_Vector_Spaces_and_Bases/037-network.ipynb
@@ -120,15 +120,15 @@
     "\\end{equation}\n",
     "where $\\vv f = \\bm f_1 \\\\ f_2 \\\\ f_3 \\\\ f_4 \\\\ f_5 \\em \\in \\mathbb{R}^{5}$ is the vector of edge flows. If we assume that $s_1$ and $s_4$ is given to us (they often are), then the solution set to [](#flow_conserve) characterizes all flows compatible with the network and the source vector $\\vv s$.\n",
     "\n",
-    "From [this theorem](./035-kernel_image.ipynb#soln_thm), we see that $A \\vv f = - \\vv s$ has a solution if and only if $\\vv s \\in $Col$(A)$. Let's try to understand when this might be true by computing a basis for Col$(A)$.\n",
+    "From [this theorem](./035-kernel_image.ipynb), we see that $A \\vv f = - \\vv s$ has a solution if and only if $\\vv s \\in $Col$(A)$. Let's try to understand when this might be true by computing a basis for Col$(A)$.\n",
     "\n",
     "From [](#inc_A), we notice that \n",
-    "1. columns 1, 2 and 3 are _not independent_: column 3 = column 2 - column 1.\n",
-    "2. columns 3, 4 and 5 are _not independent_: column 5 = column 4 - column 3 = column 4 - column2 + column 1\n",
+    "1. columns 1, 2 and 3 are **not independent**: column 3 = column 2 - column 1.\n",
+    "2. columns 3, 4 and 5 are **not independent**: column 5 = column 4 - column 3 = column 4 - column2 + column 1\n",
     "\n",
-    "However, we have that columns 1, 2  and 4 are _independent_! Since we can represent columns 3 and 5 in terms of columns 1, 2  and 4, they span Col$(A)$. We conclude that columns 1, 2 and 4 form a basis for Col$(A)$, and dim(Col$(A)) = 3$. \n",
+    "However, we have that columns 1, 2  and 4 are **independent**! Since we can represent columns 3 and 5 in terms of columns 1, 2  and 4; columns 1, 2 and 4 span Col$(A)$. We conclude that columns 1, 2 and 4 form a basis for Col$(A)$, and dim(Col$(A)) = 3$. \n",
     "\n",
-    "If we take a closer look at [](#network), edges $1, 2$ and $3$ form a _loop_ in the graph, while edges $3, 4$ and $5$ form another _loop_. In contrast, $1, 2$ and $4$ form a _tree_, which has no loops! This tells us that the edges of any tree in our graph gives us independent columns! \n",
+    "Now, let's take a closer look at [](#network): edges $1, 2$ and $3$ form a **loop** in the graph, while edges $3, 4$ and $5$ form another **loop**. In contrast, edges $1, 2$ and $4$ form a tree, which has no loops! This tells us that the edges of any tree in our graph gives us independent columns! \n",
     "\n",
     "We check if $\\vv s \\in$Col$(A)$ using columns $1, 2 $ and $4$.\n",
     "\\begin{equation}\n",
@@ -215,14 +215,6 @@
    "source": [
     "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/01_Ch_2_Vector_Spaces_and_Bases/037-network.ipynb)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c974079e-ddfa-487d-9623-9285e358c5c8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
