--- a/01_Ch_2_Vector_Spaces_and_Bases/032-subspaces.ipynb
+++ b/01_Ch_2_Vector_Spaces_and_Bases/032-subspaces.ipynb
@@ -37,7 +37,7 @@
    "id": "7cc1a707-4f3c-4f9e-b70e-8e7a7c5d5376",
    "metadata": {},
    "source": [
-    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/01_Vector_Spaces_and_Bases/032-subspaces.ipynb)\n",
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/01_Ch_2_Vector_Spaces_and_Bases/032-subspaces.ipynb)\n",
     "\n",
     "{doc}`Lecture notes <../lecture_notes/Lecture 03 - Vector Spaces 1_ Definitions, Subspaces, Span, Linear Independence, Basis, and Dimension.pdf>`"
    ]
@@ -60,8 +60,8 @@
     "## Learning Objectives\n",
     "\n",
     "By the end of this page, you should know:\n",
-    "- what a subspace is\n",
-    "- examples of subspaces and subsets that are not subspaces"
+    "- the definition of a subspace\n",
+    "- examples of (i) subspaces and (ii) subsets that are not subspaces"
    ]
   },
   {
@@ -69,7 +69,7 @@
    "id": "170438e7",
    "metadata": {},
    "source": [
-    "## Defining subspaces\n",
+    "## Defining Subspaces\n",
     "\n",
     "Vector spaces arising in applications typically consist of an appropriate subset of vectors selected from a larger vector space. These vector spaces living \"inside\" of other vector spaces are called _subspaces_.\n",
     "\n",
@@ -128,7 +128,7 @@
     "tags": []
    },
    "source": [
-    ":::{prf:example} Subsets of $\\mathbb{R}^3$ that are **not** subspaces\n",
+    ":::{prf:example} Subsets of $\\mathbb{R}^3$ that are **not** Subspaces\n",
     ":label:R3_ex2\n",
     "\n",
     "1. The set of all vectors of the form $\\bm x \\\\ y \\\\ 1 \\em$, because $\\vv 0$ is not in this set.\n",
@@ -142,7 +142,7 @@
    "id": "fed8844c-73fe-4b07-b153-ddd09659c72c",
    "metadata": {},
    "source": [
-    ":::{prf:example} Subspaces of discrete time signals\n",
+    ":::{prf:example} Subspaces of Discrete Time Signals\n",
     ":label:subspace-ex3\n",
     "\n",
     "Here, our base vector space is $\\mathbb S$, the space of all doubly infinite signals $\\{y_k\\} = (..., y_{-2}, y_{-1}, y_0, y_1, y_2 ...)$.\n",
@@ -171,7 +171,7 @@
    "id": "5c276074-315d-409e-a636-d88d8a208e44",
    "metadata": {},
    "source": [
-    ":::{prf:example} Subspaces of matrices\n",
+    ":::{prf:example} Subspaces of Matrices\n",
     ":label:subspace-ex4\n",
     "\n",
     "The following are easily verified to be subspaces of $\\mathbb R^{m \\times n}$.\n",
@@ -194,7 +194,7 @@
    "id": "ddecbbf0",
    "metadata": {},
    "source": [
-    ":::{prf:example} Subspaces of function space $\\mathcal F(I)$\n",
+    ":::{prf:example} Subspaces of Function Space $\\mathcal F(I)$\n",
     ":label:subspace-ex5\n",
     "\n",
     "Here our base space is $\\mathcal F(I)$, the space of real-valued functions defined on the interval $I$.\n",
@@ -210,7 +210,7 @@
    "id": "918abc5f-b2c1-47f1-b852-18c6b97f87af",
    "metadata": {},
    "source": [
-    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/01_Vector_Spaces_and_Bases/032-subspaces.ipynb)"
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/01_Ch_2_Vector_Spaces_and_Bases/032-subspaces.ipynb)"
    ]
   },
   {
@@ -242,7 +242,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.8.19"
   }
  },
  "nbformat": 4,
