--- a/01_Ch_2_Vector_Spaces_and_Bases/033-span_lin_ind.ipynb
+++ b/01_Ch_2_Vector_Spaces_and_Bases/033-span_lin_ind.ipynb
@@ -37,7 +37,7 @@
    "id": "1ef94889-cc25-4032-afee-9fee646ba2d5",
    "metadata": {},
    "source": [
-    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/01_Vector_Spaces_and_Bases/033-span_lin_ind.ipynb)\n",
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/01_Ch_2_Vector_Spaces_and_Bases/033-span_lin_ind.ipynb)\n",
     "\n",
     "{doc}`Lecture notes <../lecture_notes/Lecture 03 - Vector Spaces 1_ Definitions, Subspaces, Span, Linear Independence, Basis, and Dimension.pdf>`"
    ]
@@ -49,7 +49,7 @@
    "source": [
     "## Reading\n",
     "\n",
-    "Material related to this page, as well as additional exercises, can be found in ALA Ch. 2.3 and LAA 4.1."
+    "Material related to this page, as well as additional exercises, can be found in ALA Ch. 2.3 and LAA 4.1, 4.3."
    ]
   },
   {
@@ -113,7 +113,7 @@
    "id": "af7f5403-8949-4fd6-92ed-30b6de0894b5",
    "metadata": {},
    "source": [
-    ":::{prf:example} Spans of 2 vectors in $\\mathbb{R}^3$\n",
+    ":::{prf:example} Spans of 2 Vectors in $\\mathbb{R}^3$\n",
     ":label:R3_ex1_span\n",
     "\n",
     "Let $\\vv v_1, \\vv v_2 \\in \\mathbb{R}^3$.\n",
@@ -135,7 +135,7 @@
     "tags": []
    },
    "source": [
-    ":::{exercise} Checking membership of in a span of vectors\n",
+    ":::{exercise} Checking Membership of a Vector in a Span of Vectors\n",
     ":label:span_ex2\n",
     "\n",
     "Let $W = \\textrm{span}\\{\\vv v_1, \\vv v_2\\} \\subset \\mathbb{R}^3$, where \n",
@@ -173,7 +173,7 @@
    "id": "e0828049",
    "metadata": {},
    "source": [
-    ":::{prf:example} Span in a function space\n",
+    ":::{prf:example} Span in a Function Space\n",
     ":label:span_lin_ind-ex3\n",
     "\n",
     "Let $V = \\mathcal F(\\mathbb R)$ denote the space of scalar functions $f(x)$ defined on $\\mathbb R$. The span of the three monomials $f_1(x) = 1$, $f_2(x) = x$, $f_3(x) = x^2$ is the set of functions of the form:\n",
@@ -196,7 +196,7 @@
     "\n",
     "_Linear dependence_ captures a notion of \"redundancy\" in a collection of vectors. \n",
     "\n",
-    ":::{prf:definition} Linear dependency\n",
+    ":::{prf:definition} Linear Dependency\n",
     ":label:lin_dep\n",
     "The vectors $\\vv v_1 , \\ldots , \\vv v_k \\in V$ are _linearly dependent_ if there exist scalars $c_1 , \\ldots , c_k$, _not all zero_, such that\n",
     "\\begin{equation}\n",
@@ -292,7 +292,7 @@
    "id": "b51a81e6-553c-46d7-b0f8-7e32475c1212",
    "metadata": {},
    "source": [
-    "## Checking linear independence in $\\mathbb{R}^n$\n",
+    "## Checking Linear Independence in $\\mathbb{R}^n$\n",
     "\n",
     "Given the task of checking whether $\\vv v_1 , \\ldots , \\vv v_k \\in \\mathbb{R}^n$ is linearly dependent, we start by constructing the $n \\times k$ matrix $A = \\bm \\vv v_1 & \\ldots & \\vv v_k \\em$ with columns defined by $\\vv v_i$. Using matrix-vector multiplication, we interpret [](#lin_dep_eqn) as \n",
     "\\begin{equation}\n",
@@ -331,7 +331,7 @@
    "id": "122dab45",
    "metadata": {},
    "source": [
-    ":::{exercise} Checking linear independence in $\\mathbb{R}^4$\n",
+    ":::{exercise} Checking Linear Independence in $\\mathbb{R}^4$\n",
     ":label:span_lin_ind-ex7\n",
     "\n",
     "Determine if the vectors \n",
@@ -412,7 +412,7 @@
    "id": "dc57efc2-ecae-47c6-a05f-0b6d496f76b5",
    "metadata": {},
    "source": [
-    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/01_Vector_Spaces_and_Bases/033-span_lin_ind.ipynb)"
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/01_Ch_2_Vector_Spaces_and_Bases/033-span_lin_ind.ipynb)"
    ]
   },
   {
