--- a/01_Ch_2_Vector_Spaces_and_Bases/034-basis_dim.ipynb
+++ b/01_Ch_2_Vector_Spaces_and_Bases/034-basis_dim.ipynb
@@ -174,7 +174,7 @@
    "id": "ecc72ec6",
    "metadata": {},
    "source": [
-    ":::{prf:example} Change of basis\n",
+    ":::{prf:example} Change of Basis\n",
     ":label:change_of_basis-ex1\n",
     "\n",
     "Consider the standard basis $B = \\{ \\vv e_1, \\vv e_2\\}$ for $\\mathbb R^2$. Then we have $\\bm x_1 \\\\x_2 \\em = x_1 \\vv e_1 + x_2 \\vv e_2$, and so the $B$-coordinates of $\\vv x$ are $x_1$ and $x_2$, as expected.\n",
@@ -198,7 +198,7 @@
    "id": "3c9d29d5",
    "metadata": {},
    "source": [
-    ":::{prf:example} Isomorphic vector spaces\n",
+    ":::{prf:example} Isomorphic Vector Spaces\n",
     ":label:isomorphisms-ex1\n",
     "\n",
     "Let $B = \\{ 1, x, x^2, x^3 \\}$ be the standard basis for $P^{(3)}$. A typical element $p(x) \\in P^{(3)}$ has the form $p(x) = a_0 + a_1x + a_2x^2 + a_3x^3$.\n",
