--- a/01_Ch_2_Vector_Spaces_and_Bases/035-kernel_image.ipynb
+++ b/01_Ch_2_Vector_Spaces_and_Bases/035-kernel_image.ipynb
@@ -90,7 +90,7 @@
     "## Null Space of a Matrix\n",
     "\n",
     "\n",
-    ":::{prf:definition} Null space\n",
+    ":::{prf:definition} Null Space\n",
     ":label: null_defn\n",
     "The _Null space_ of a matrix $A \\in \\mathbb{R}^{m \\times n}$ is the subspace Null$A \\subset \\mathbb{R}^n$ consisting of all vectors that are annihilated by $A$:\n",
     "\\begin{equation}\n",
@@ -200,7 +200,7 @@
     "$$\n",
     "of the columns $\\vv a_,  \\vv a_2, \\ldots , \\vv a_n$ of $A = \\bm \\vv a_1 & \\vv a_2 & \\ldots & \\vv a_n\\em$ weighted by the elements $x_i$ of $\\vv x$. By letting the coefficients $x_1, x_2, \\ldots, x_n$ vary, we can descsribe the subspace spanned by the columns of $A$, aptly named the _column space_ of $A$.\n",
     "\n",
-    ":::{prf:definition} Column space\n",
+    ":::{prf:definition} Column Space\n",
     "The column space of an $m \\times n$ matrix $A$, written as Col$(A)$, is the set of all linear combinations of the columns of $A =  \\bm \\vv a_1 & \\vv a_2 & \\ldots & \\vv a_n\\em$:\n",
     "\\begin{equation}\n",
     "\\label{col_eqn}\n",
